# unsafelink

./: LICENSE  README.md  pyproject.toml  unsafelink.py
go/: go.mod  main.go
